--- a/index.html
+++ b/index.html
@@ -1,12 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./style/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Clon de Google</title>
+  <link rel="stylesheet" href="/style/style.css">
 </head>
-<body>
-    
+<body id="boddy">
+  <div class="div1">
+    <nav class="nav1">
+      <a href="#" class="a1">Gmail</a>
+      <a href="#" class="a2">imágenes</a>
+      <a href="#" class="a3"><img src="/img/menu-de-puntos.png" alt="menu de puntos" id="img1"></a>
+      <a href="#" class="a4"><button>Log in</button></a>
+    </nav>
+  </div>
+<!-- aquí comienza la primera section /-->
+  <div class="div2">
+    <div class="div3">
+    <img src="/img/google-logo-9834.png" alt="google logo" class="img2">
+    </div>
+  </div>
+<!--barra de busqueda-->
+  <div class="div4">
+    <div class="div5">
+      <img src="/img/lupa.png" alt="" class="img3" class="relative">
+      <input type="text" name="text area" class="inputarea">
+      <img src="/img/voz-de-google.png" alt="" class="img4" class="relative">
+      <img src="/img/lens.png" alt="" class="img5" class="relative">
+    </div>
+  </div>
+
+
+
+  
 </body>
 </html>
